syntax = "proto3";
import "BasicTypes.proto";

option csharp_namespace = "QstInformationService";

package QstInformationService;

service QstInformationService {
	rpc LoadServerVersion (NoParams) returns (String);
}

